tests/paczka2/big_fuzzy/21135710.err
Error in line 11: 2smzwQz S117 -28,9
Error in line 12: u3VUShOSQX A663 82,15
Error in line 5: 2smzwQz S117 21,1
Error in line 2: u3VUShOSQX A924 66,3
Error in line 16: 2smzwQz A663 65,7
Error in line 17: u3VUShOSQX A663 230,2
Error in line 26: u3VUShOSQX S416 42,0
Error in line 19: 2smzwQz S117 10,6
Error in line 49: VpHPHPn4O S117 7,9
Error in line 47: k10o8phl A924 64,5
Error in line 54: u3VUShOSQX S416 36,2
Error in line 63: VpHPHPn4O A663 394,49
Error in line 62: 2smzwQz S416 35,4
Error in line 72: 2smzwQz S416 85,0
Error in line 65: k10o8phl A663 25,9
Error in line 89: Y6HgTyxGGp S416 93,1
Error in line 88: u3VUShOSQX A924 56,5
Error in line 92: Y6HgTyxGGp A663 62,2
Error in line 97: u3VUShOSQX S416 2,6
Error in line 95: rHHii A663 6,2
Error in line 112: rHHii A924 6,0
Error in line 122: Y6HgTyxGGp A663 61,67
Error in line 118: 2smzwQz A663 67,9
Error in line 125: 2smzwQz S117 57,7
Error in line 114: rHHii A663 36,0
Error in line 129: 2smzwQz S416 0,4
Error in line 143: Y6HgTyxGGp A663 204,2
Error in line 140: VpHPHPn4O A924 23,0
Error in line 137: u3VUShOSQX S416 88,5
Error in line 149: VpHPHPn4O S117 17,3
Error in line 154: k10o8phl S117 16,6
Error in line 142: rHHii S117 5,0
Error in line 185: A924 A663 8,2
Error in line 187: 2smzwQz A663 1,3
Error in line 186: A924 A924 4,2
Error in line 179: u3VUShOSQX A663 475,3
Error in line 194: u3VUShOSQX A924 50,1
Error in line 193: A924 A663 19,4
Error in line 184: k10o8phl A924 252,8
Error in line 207: rHHii S117 U,2
Error in line 205: rHHii A924 69,3
Error in line 195: VpHPHPn4O A663 260,0
Error in line 224: 2smzwQz A924 75,0
Error in line 237: k10o8phl A663 25,6
Error in line 240: rHHii S416 405,2
Error in line 242: Y6HgTyxGGp S416 0,5
Error in line 248: k1wo8phl S117 9w,7
